# GRE

./: ._.git  ._.lineno  ._Engine  ._Example  ._LICENSE  ._Plugins  ._Projects  ._README.md  ._resources  .gitignore  CMakeLists.txt  README.md  bootstrap.sh
Engine/: ._inc  ._src  CMakeLists.txt
Engine/inc/: ._AxisAlignedBoundingBox.h  ._BinaryTreeScene.h  ._Camera.h  ._CameraCustomNode.h  ._Camera_old.h  ._Clonable.h  ._Color.h  ._CustomNode.h  ._CustomNodePrivate.h  ._CustomScene.h  ._Event.h  ._Face.h  ._FileLoader.h  ._FrameBuffer.h  ._HardwareBuffer.h  ._HardwareIndexBuffer.h  ._HardwareProgram.h  ._HardwareProgramManager.h  ._HardwareProgramVariable.h  ._HardwareProgramVariables.h  ._HardwareShader.h  ._HardwareVertexBuffer.h  ._Image.h  ._Key.h  ._Keyboard.h  ._LoopBehaviours.h  ._Material.h  ._Mesh.h  ._MeshCustomNode.h  ._MeshLoader.h  ._Node.h  ._NodePrivate.h  ._Pass.h  ._Pixel.h  ._Plugin.h  ._Pools.h  ._ReferenceCounter.h  ._RenderContext.h  ._RenderContextInfo.h  ._RenderTarget.h  (+128 more)
Engine/src/: ._AxisAlignedBoundingBox.cpp  ._BinaryTreeScene.cpp  ._Camera.cpp  ._CameraCustomNode.cpp  ._Camera_old.cpp  ._Color.cpp  ._CustomNode.cpp  ._CustomNodePrivate.cpp  ._CustomScene.cpp  ._Event.cpp  ._Face.cpp  ._FileLoader.cpp  ._FrameBuffer.cpp  ._HardwareBuffer.cpp  ._HardwareIndexBuffer.cpp  ._HardwareProgram.cpp  ._HardwareProgramManager.cpp  ._HardwareProgramVariable.cpp  ._HardwareProgramVariables.cpp  ._HardwareShader.cpp  ._HardwareVertexBuffer.cpp  ._Image.cpp  ._Keyboard.cpp  ._LoopBehaviours.cpp  ._Material.cpp  ._Mesh.cpp  ._MeshCustomNode.cpp  ._MeshLoader.cpp  ._Node.cpp  ._NodePrivate.cpp  ._Pass.cpp  ._Plugin.cpp  ._Pools.cpp  ._ReferenceCounter.cpp  ._RenderContext.cpp  ._RenderContextInfo.cpp  ._RenderTarget.cpp  ._Renderer.cpp  ._Resource.cpp  ._ResourceHolder.cpp  (+121 more)
Example/: ._Example1.cpp  ._Example2.cpp  ._main.cpp  CMakeLists.txt  Example1.cpp  Example2.cpp  Example3.cpp  main.cpp
Plugins/: ._ExamplePlugin  ._JPEGLoader  ._OpenGlRenderer  ._OsXWindow  CMakeLists.txt
Plugins/BMPTextureLoader/: CMakeLists.txt
Plugins/BMPTextureLoader/src/: PluginMain.cpp  bmpread.cpp
Plugins/BasicDefinitions/: CMakeLists.txt
Plugins/BasicDefinitions/inc/: FramebufferWorker.h  MatVarWorker.h  PipelineWorker.h  ProgramWorker.h  ProjectionWorker.h  TechniqueWorker.h  TextureWorker.h
Plugins/BasicDefinitions/src/: FramebufferWorker.cpp  MatVarWorker.cpp  PipelineWorker.cpp  ProgramWorker.cpp  ProjectionWorker.cpp  TechniqueWorker.cpp  TextureWorker.cpp  main.cpp
Plugins/DarwinGlRenderer/inc/: DarwinGlContext.h  DarwinGlHardwareProgram.h  DarwinGlHardwareProgramManager.h  DarwinGlHardwareShader.h  DarwinGlHeader.h  DarwinGlRenderer.h  DarwinGlTexture.h
Plugins/DarwinGlRenderer/src/: DarwinGlContext.cpp  DarwinGlHardwareProgram.cpp  DarwinGlHardwareProgramManager.cpp  DarwinGlHeader.cpp  DarwinGlRenderer.cpp  DarwinGlRendererMain.cpp
Plugins/DefaultControllers/: CMakeLists.txt
Plugins/DefaultControllers/inc/: DefaultKeys.h
Plugins/DefaultControllers/src/: DefaultKeys.cpp  main.cpp
Plugins/ExamplePlugin/: ._mypluginmain.cpp
Plugins/GlXRenderer/: GlXPluginMain.cpp  GlXRenderer.cpp  GlXWindow.cpp  GlXWindow.h
Plugins/JPEGLoader/: ._jpegloader.cpp  jpegloader.cpp
Plugins/OpenGlRenderer/: ._OpenGlFrameBuffer.cpp  ._OpenGlFrameBuffer.h  ._OpenGlHardwareProgram.cpp  ._OpenGlHardwareProgram.h  ._OpenGlHardwareProgramManager.cpp  ._OpenGlHardwareProgramManager.h  ._OpenGlHardwareShader.cpp  ._OpenGlHardwareShader.h  ._OpenGlHardwareVariable.cpp  ._OpenGlHardwareVariable.h  ._OpenGlIncludes.cpp  ._OpenGlIncludes.h  ._OpenGlIndexBuffer.cpp  ._OpenGlIndexBuffer.h  ._OpenGlRenderContext.cpp  ._OpenGlRenderContext.h  ._OpenGlRenderer.h  ._OpenGlRendererClass.cpp  ._OpenGlTexture.cpp  ._OpenGlTexture.h  ._OpenGlVertexBuffer.cpp  ._OpenGlVertexBuffer.h  ._khrglext.h  ._openglrenderer.cpp  CMakeLists.txt  OpenGlFrameBuffer.cpp  OpenGlFrameBuffer.h  OpenGlHardwareProgram.cpp  OpenGlHardwareProgram.h  OpenGlHardwareProgramManager.cpp  OpenGlHardwareProgramManager.h  OpenGlHardwareShader.cpp  OpenGlHardwareShader.h  OpenGlHardwareVariable.cpp  OpenGlHardwareVariable.h  OpenGlIncludes.cpp  OpenGlIncludes.h  OpenGlIndexBuffer.cpp  OpenGlIndexBuffer.h  OpenGlRenderContext.cpp  (+7 more)
Plugins/OpenGlRenderer/inc/: OpenGlRenderer.h
Plugins/OpenGlRenderer/src/: OpenGlFramebufferCreator.cpp  OpenGlHardwareIndexBuffer.cpp  OpenGlHardwareVertexBuffer.cpp  OpenGlMeshManager.cpp  OpenGlProgram.cpp  OpenGlProgramManager.cpp  OpenGlRenderer.cpp  OpenGlRendererLoader.cpp  OpenGlShader.cpp  OpenGlTexture.cpp  OpenGlTextureManager.cpp  PluginMain.cpp
Plugins/OsXWindow/: ._CustomWindow.h  ._CustomWindow.m  ._OSXFunctions.h  ._OSXImage.h  ._OSXWindow.h  ._OSXWindowClass.cpp  ._OpenGlCustomView.h  ._OpenGlCustomView.m  ._PluginMain.cpp  ._WindowApi.m  CMakeLists.txt  CustomWindow.h  CustomWindow.m  DarwinApplication.cpp  DarwinApplication.h  OSXFunctions.h  OSXImage.h  OSXWindow.h  OSXWindowClass.cpp  OpenGlCustomView.h  OpenGlCustomView.m  PluginMain.cpp  WindowApi.m  osxwindow.cpp  osxwindow.m
Plugins/PNGTextureLoader/: CMakeLists.txt
Plugins/PNGTextureLoader/src/: PluginMain.cpp
Plugins/X11OpenGlWindow/: CMakeLists.txt  README
Plugins/X11OpenGlWindow/inc/: X11Application.h  X11Keycodes.h  X11OpenGl.h  X11OpenGlContext.h  X11OpenGlWindow.h
Plugins/X11OpenGlWindow/src/: Plugin.cpp  X11Application.cpp  X11Keycodes.cpp  X11OpenGlContext.cpp  X11OpenGlWindow.cpp
Plugins/macOSWindow/: CMakeLists.txt
Plugins/macOSWindow/inc/: macOSPlatform.h  macOSWindow.h  macOSWindowManager.h  nsContext.h
Plugins/macOSWindow/src/: PluginMain.cpp  macOSWindow.mm  macOSWindowManager.cpp  macOSWindowManager.mm  nsContext.mm
Plugins/olds/DarwinGlRenderer/: CMakeLists.txt
Plugins/olds/ExamplePlugin/: mypluginmain.cpp
Plugins/olds/GlXRenderer/: GlX11Headers.h  GlXApplication.cpp  GlXApplication.h  GlXContext.cpp  GlXContext.h  GlXRenderer.h
Plugins/olds/OpenGlRenderer/: OpenGlFrameBuffer.cpp  OpenGlHardwareProgram.cpp  OpenGlHardwareShader.cpp  OpenGlIncludes.cpp  OpenGlIndexBuffer.cpp  (+4 more)
(+123 files in other folders)
